feat(products):implement GetProduct and PostProduct as well as implement the UpsertProduct function

--- a/app/internal/products/presentation/oapi/config.yaml
+++ b/app/internal/products/presentation/oapi/config.yaml
@@ -3,6 +3,7 @@ package: oapi_codegen
 generate:
   gin-server: true
   models: true
+  embedded-spec: true
 
 output: generated/server.gen.go
 output-options:
