--- a/terraform/config/api-gateway-spec.yaml
+++ b/terraform/config/api-gateway-spec.yaml
@@ -512,6 +512,7 @@ components:
         - email
         - name
         - password
+      additionalProperties: false
       properties:
         email:
           type: string
@@ -524,6 +525,7 @@ components:
       required:
         - id
         - name
+      additionalProperties: false
       properties:
         email:
           type: string
@@ -534,6 +536,7 @@ components:
       required:
         - seller
         - access_token
+      additionalProperties: false
       properties:
         seller:
           type: object
@@ -555,6 +558,7 @@ components:
       required:
         - id
         - name
+      additionalProperties: false
       properties:
         email:
           type: string
@@ -565,6 +569,7 @@ components:
       required:
         - email
         - password
+      additionalProperties: false
       properties:
         email:
           type: string
@@ -575,6 +580,7 @@ components:
       required:
         - refresh_token
         - expires_at
+      additionalProperties: false
       properties:
         refresh_token:
           type: string
@@ -584,6 +590,7 @@ components:
       type: object
       required:
         - refresh_token
+      additionalProperties: false
       properties:
         refresh_token:
           type: string
@@ -592,6 +599,7 @@ components:
       required:
         - refresh_token
         - expires_at
+      additionalProperties: false
       properties:
         refresh_token:
           type: string
@@ -601,6 +609,7 @@ components:
       type: object
       required:
         - refresh_token
+      additionalProperties: false
       properties:
         refresh_token:
           type: string
@@ -609,6 +618,7 @@ components:
       required:
         - access_token
         - expires_at
+      additionalProperties: false
       properties:
         access_token:
           type: string
@@ -620,6 +630,7 @@ components:
       required:
         - products
         - next_page_token
+      additionalProperties: false
       properties:
         products:
           type: array
@@ -634,6 +645,7 @@ components:
         - name
         - seller_id
         - picture_url
+      additionalProperties: false
       properties:
         id:
           type: string
@@ -655,6 +667,7 @@ components:
         - stock
         - created_at
         - updated_at
+      additionalProperties: false
       properties:
         id:
           type: string
@@ -681,6 +694,7 @@ components:
         - description
         - metadata
         - stock
+      additionalProperties: false
       properties:
         name:
           type: string
@@ -702,6 +716,7 @@ components:
         - stock
         - created_at
         - updated_at
+      additionalProperties: false
       properties:
         id:
           type: string
@@ -724,6 +739,7 @@ components:
     UpdateProductReq:
       type: object
       minProperties: 1
+      additionalProperties: false
       properties:
         name:
           type: string
@@ -740,6 +756,7 @@ components:
     UpdateProductRes:
       type: object
       minProperties: 1
+      additionalProperties: false
       properties:
         name:
           type: string
@@ -753,6 +770,7 @@ components:
       type: object
       required:
         - id
+      additionalProperties: false
       properties:
         id:
           type: string
@@ -766,6 +784,7 @@ components:
       required:
         - id
         - url
+      additionalProperties: false
       properties:
         id:
           type: string
@@ -776,6 +795,7 @@ components:
       required:
         - id
         - url
+      additionalProperties: false
       properties:
         id:
           type: string
@@ -785,6 +805,7 @@ components:
       type: object
       required:
         - id
+      additionalProperties: false
       properties:
         id:
           type: string
@@ -794,6 +815,7 @@ components:
       required:
         - code
         - message
+      additionalProperties: false
       properties:
         code:
           type: integer
@@ -810,6 +832,7 @@ components:
             type: object
             required:
               - errors
+            additionalProperties: false
             properties:
               errors:
                 type: array
