feat(products):advance in creating ListProducts handler

--- a/terraform/config/api-gateway-spec.yaml
+++ b/terraform/config/api-gateway-spec.yaml
@@ -638,6 +638,7 @@ components:
             $ref: '#/components/schemas/ListProductsResProduct'
         next_page_token:
           type: string
+          nullable: true
     ListProductsResProduct:
       type: object
       required:
