feat(catalog):make search and catalog http API endpoints work

--- a/terraform/config/api-gateway-spec.yaml
+++ b/terraform/config/api-gateway-spec.yaml
@@ -898,7 +898,6 @@ components:
       required:
         - id
         - name
-        - picture
         - price
       additionalProperties: false
       properties:
@@ -909,6 +908,7 @@ components:
         picture:
           type: string
           description: url
+          nullable: true
         price:
           type: number
           format: double
