implement catalog service and try to debug s3 501 code header error

--- a/terraform/config/api-gateway-spec.yaml
+++ b/terraform/config/api-gateway-spec.yaml
@@ -452,6 +452,9 @@ paths:
                   format: binary
                 caption:
                   type: string
+            encoding:
+              file:
+                contentType: image/jpeg, image/png
       responses:
         200:
           description: Data of uploaded picture
