feat(cart):prepare bootstrap code

--- a/app/Makefile
+++ b/app/Makefile
@@ -53,6 +53,16 @@ generate_api_cart:
 	@mkdir -p ./internal/cart/presentation/generated
 	@cat /Users/bratushkadan/projects/diploma/terraform/config/api-gateway-spec.yaml | yq -M 'del(.servers)' > ./internal/cart/presentation/oapi/api.yaml
 	@go generate ./internal/cart/...
+.PHONY: generate_api_orders
+generate_api_orders:
+	@mkdir -p ./internal/orders/presentation/generated
+	@cat /Users/bratushkadan/projects/diploma/terraform/config/api-gateway-spec.yaml | yq -M 'del(.servers)' > ./internal/orders/presentation/oapi/api.yaml
+	@go generate ./internal/orders/...
+.PHONY: generate_api_feedback
+generate_api_feedback:
+	@mkdir -p ./internal/feedback/presentation/generated
+	@cat /Users/bratushkadan/projects/diploma/terraform/config/api-gateway-spec.yaml | yq -M 'del(.servers)' > ./internal/feedback/presentation/oapi/api.yaml
+	@go generate ./internal/feedback/...
 
 .PHONY: migrate_auth_create_pg
 migrate_auth_create_pg:
